--- a/recovery-dashboard.html
+++ b/recovery-dashboard.html
@@ -375,7 +375,8 @@
             "tamanna": { pass: "pass123", role: "exec", name: "Tamanna Kalariya" },
             "vishal": { pass: "pass123", role: "exec", name: "Vishal" },
             "wassef": { pass: "pass123", role: "exec", name: "Wassef Wani" },
-            "yashraj": { pass: "pass123", role: "exec", name: "Yashraj Santosh Misal" }
+            "yashraj": { pass: "pass123", role: "exec", name: "Yashraj Santosh Misal" },
+            "deeksha": { pass: "pass123", role: "exec", name: "deeksha poojari" }
         };
 
         // Fallback Mapping
@@ -863,4 +864,5 @@
         console.log("SalesHub Script Loaded Successfully");
     </script>
 </body>
+
 </html>
