--- a/recovery-dashboard.html
+++ b/recovery-dashboard.html
@@ -376,7 +376,7 @@
             "vishal": { pass: "pass123", role: "exec", name: "Vishal" },
             "wassef": { pass: "pass123", role: "exec", name: "Wassef Wani" },
             "yashraj": { pass: "pass123", role: "exec", name: "Yashraj Santosh Misal" },
-            "deeksha": { pass: "pass123", role: "exec", name: "deeksha poojari" }
+            "deeksha": { pass: "pass123", role: "exec", name: "deeksha" }
         };
 
         // Fallback Mapping
@@ -866,3 +866,4 @@
 </body>
 
 </html>
+
