--- a/recovery-dashboard.html
+++ b/recovery-dashboard.html
@@ -372,7 +372,7 @@
             "subhash": { pass: "pass123", role: "exec", name: "Subhash S" },
             "sumana": { pass: "pass123", role: "exec", name: "Sumana Samanta" },
             "sushmitha": { pass: "pass123", role: "exec", name: "Sushmitha" },
-            "tamanna": { pass: "pass123", role: "exec", name: "Tamanna Kalariya" },
+            "tamanna": { pass: "pass123", role: "exec", name: "Tamanna" },
             "vishal": { pass: "pass123", role: "exec", name: "Vishal" },
             "wassef": { pass: "pass123", role: "exec", name: "Wassef Wani" },
             "yashraj": { pass: "pass123", role: "exec", name: "Yashraj Santosh Misal" },
@@ -866,6 +866,7 @@
 </body>
 
 </html>
+
 
 
 
