--- a/recovery-dashboard.html
+++ b/recovery-dashboard.html
@@ -359,6 +359,7 @@
             "palash": { pass: "pass123", role: "exec", name: "Palash" },
             "poojan": { pass: "pass123", role: "exec", name: "Poojan Kothari" },
             "pratikshya": { pass: "pass123", role: "exec", name: "Pratikshya" },
+            "dhruva": { pass: "pass123", role: "exec", name: "Dhruva Kumar" },
             "pritha": { pass: "pass123", role: "exec", name: "Pritha Guha Majumdar" },
             "priya": { pass: "pass123", role: "exec", name: "Priya Kulkarni" },
             "ramij": { pass: "pass123", role: "exec", name: "RAMIJ RAI GAYEN" },
@@ -866,6 +867,7 @@
 </body>
 
 </html>
+
 
 
 
